# thufir

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: formatting.yaml  tests.yaml
docs/: DESIGN.md  TODO.md  USER_STORIES.md
reader/: reader.py
reader/models/: feed.py
src/thufir/: thufir.py
src/thufir/abstractions/: api.py  database.py  manager.py  provider.py  repository.py  types.py
src/thufir/agent/: agent.py
src/thufir/api/: api.py  feeds.py
src/thufir/config/: database_config.py  thufir_config.py
src/thufir/database/: database.py  database_impl.py
src/thufir/database/models/: rss.py  user.py
src/thufir/exceptions/: database.py  models.py
src/thufir/models/: base_model.py  rss.py  user.py
src/thufir/reader/: rss_reader.py
src/thufir/repositories/feed/: feed_repository.py
tests/test_database/: test_database_impl.py
tests/test_database/test_models/: test_rss_models.py
tests/test_models/: test_base.py  test_rss.py  test_rss_models.py
tests/test_reader/: fixtures.py  test_reader.py  utils.py
tests/utils/: database_config.py
