[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thufir"
authors = [{name = "ni3dzwi3dz"}]
version = "0.1.0"
requires-python = ">=3.8,<4.0"
dependencies = [
    "fastapi[standard]==0.115.8",
    "feedparser==6.0.11",
    "langchain==0.3.25",
    "SQLAlchemy==2.0.41",
    "psycopg2==2.9.10",
    "pre-commit==4.2.0",
]

[project.optional-dependencies]
testing = [
    "pytest"
]

[project.scripts]
dev = "src.thufir.thufir:dev"

[tool.hatch.envs.default]
python = "3.13"
features = ["testing"]

[tool.hatch.envs.default.scripts]
unit = ["pytest tests/"]

[tool.hatch.build.targets.wheel]
packages = ["reader"]
